fix: args and command conversion to string